kubernetes/apps/kubeflow/central-dashboard/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: central-dashboard
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - kubeflow.goyangi.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: central-dashboard
          port: 8082
